# regulatory-rnn

./: README.md  main.py  pyproject.toml
notebooks/: test.ipynb
src/regulatory_rnn/: __init__.py  datasets.py  model.py  network.py
