[project]
name = "regulatory_rnn"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz==0.20.3",
    "ipython==7.34.0",
    "matplotlib==3.10.0",
    "pandas==2.2.2",
    "torch==2.5.1",
    "tqdm==4.67.1",
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
